--- a/src/btschedulerapp/BTSchedulerGUI.form
+++ b/src/btschedulerapp/BTSchedulerGUI.form
@@ -332,6 +332,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="ADD PATIENT"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addBtnActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="clearBtn">
           <Properties>
@@ -340,6 +343,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="CLEAR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clearBtnActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="exitBtn">
           <Properties>
@@ -348,6 +354,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="(X)  EXIT"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="exitBtnActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="numPBtn">
           <Properties>
@@ -391,6 +400,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Mark Absent"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="markAbsentBtnActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="absentBtn">
           <Properties>
@@ -399,6 +411,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Show Absence"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="absentBtnActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
